==> Microchip-MPLAB-Harmony/reference_apps/apps/sam_d21_cnano/ACK_Device_SDK_3_1_202002192328/user/platform/stm32/ack_stm32_platform.c <==
#include "ack.h"
#include "ack_circularbuffer.h"
#include "ack_stm32_ota.h"
#include "ack_user_platform.h"
#include <inttypes.h>
#include "main.h"
#include <stdarg.h>
#define ACK_MODULE_UART huart1
#define ACK_DEBUG_UART huart2

void ACKPlatform_Initialize(void)
{
#ifdef ACK_SAMPLE_APPLICATIONS_LED_PIN
    // Make sure the LED starts in an off state.
    ACKPlatform_WriteDigitalPin(ACK_HW_PIN_SAMPLE_APPLICATIONS_LED, false);
#endif
#ifdef ACK_SAMPLE_APPLICATIONS_GPIO_PIN_1
    ACKPlatform_WriteDigitalPin(ACK_HW_PIN_SAMPLE_APPLICATIONS_GPIO_1, false);
#endif
#ifdef ACK_SAMPLE_APPLICATIONS_GPIO_PIN_2
    ACKPlatform_WriteDigitalPin(ACK_HW_PIN_SAMPLE_APPLICATIONS_GPIO_2, false);
#endif    
#ifdef ACK_SAMPLE_APPLICATIONS_GPIO_PIN_3
    ACKPlatform_WriteDigitalPin(ACK_HW_PIN_SAMPLE_APPLICATIONS_GPIO_3, false);
#endif    

    ACK_InitializeCircularBuffer(&sg_commsRxBuffer);

    _StartCommsRead();
}

void ACKPlatform_WriteDigitalPin(ACKHardwarePin_t pin, bool state)
{
    HAL_GPIO_WritePin(
        sg_stm32DigitalPins[pin].Port,
        sg_stm32DigitalPins[pin].Pin,
        state ? GPIO_PIN_SET : GPIO_PIN_RESET);
}

bool ACKPlatform_ReadDigitalPin(ACKHardwarePin_t pin)
{
    return GPIO_PIN_RESET != HAL_GPIO_ReadPin(sg_stm32DigitalPins[pin].Port, sg_stm32DigitalPins[pin].Pin);
}

void ACKPlatform_SetDigitalPinPWMLevel(ACKHardwarePin_t pin, uint8_t val)
{
    // This is a temporary solution to make code compile.
    // If val >= 128, the pin will be set, otherwise it will be reset.
    // Need to replace with an actual PWM implementation.
    HAL_GPIO_WritePin(
        sg_stm32DigitalPins[pin].Port,
        sg_stm32DigitalPins[pin].Pin,
        val >= 128 ? GPIO_PIN_SET : GPIO_PIN_RESET);
}

bool ACKPlatform_Send(const void* pBuffer, size_t length, uint32_t timeoutMilliseconds)
{
    uint32_t t0;
    HAL_StatusTypeDef err;

    t0 = HAL_GetTick();

    err = HAL_UART_Transmit_IT(&ACK_MODULE_UART, (uint8_t*)pBuffer, length);
    if (HAL_OK != err)
    {
        ACK_DEBUG_PRINT_E("Unable to initiate transmit on comms uart (err=%u)", err);
        return false;
    }

    while ((sg_commsUartTxReady != SET) && (sg_commsUartError != SET))
    {
        if ((HAL_GetTick() - t0) >= timeoutMilliseconds)
        {
            ACK_DEBUG_PRINT_E("Timeout on comms uart (write)");
            return false;
        }
    }

    ITStatus errStatus = sg_commsUartError;
    sg_commsUartTxReady = RESET;
    sg_commsUartError = RESET;

    if (SET == errStatus)
    {
        ACK_DEBUG_PRINT_E("Error on comms uart (write)");
        return false;
    }

    return true;
}

bool ACKPlatform_Receive(void* pBuffer, size_t length, uint32_t timeoutMilliseconds)
{
    uint32_t t0;

    t0 = HAL_GetTick();

    while ((length > 0)
        && (RESET == sg_commsUartError)
        && ((HAL_GetTick() - t0) < timeoutMilliseconds))
    {
        uint8_t byte;
        if (!ACK_ReadFromCircularBuffer(&sg_commsRxBuffer, &byte))
        {
            continue;
        }

        *(uint8_t*)pBuffer = byte;
        pBuffer = (uint8_t*)pBuffer + 1;
        --length;
    }

    ITStatus errStatus = sg_commsUartError;
    sg_commsUartError = RESET;

    if (SET == errStatus)
    {
        ACK_DEBUG_PRINT_E("Error on comms uart (read)");
        return false;
    }

    if (length > 0)
    {
        ACK_DEBUG_PRINT_E("Timeout on comms uart (read)");
        return false;
    }

    return true;
}

void ACKPlatform_DebugPrint(const char* pMessage, ...)
{
    char buffer[250];

    va_list argptr;
    va_start(argptr, pMessage);
    int count = vsnprintf(buffer, sizeof(buffer) - 2, pMessage, argptr);
    va_end(argptr);

    if (count >= 0)
    {
        buffer[count] = '\r';
        buffer[count + 1] = '\n';
        count += 2;

        if (HAL_OK == HAL_UART_Transmit_IT(&ACK_DEBUG_UART, (uint8_t*)buffer, count))
        {
            while ((sg_debugUartTxReady != SET) && (sg_debugUartError != SET))
            {
            }

            sg_debugUartTxReady = RESET;
            sg_debugUartError = RESET;
        }
    }
}
